SecurityConfig update for deployment.